--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4390515846743710"
      crossorigin="anonymous"></script>
-     
+
+    <meta name="google-site-verification" content="google0f348284f7152e0b" />
+    
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
