Add Google site verification meta tag

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 </head>
 <body>
 
+<meta name="google-site-verification" content="Xp6jifYBYSC8byy9SGPukQzFkWpE6HjCeP-LcLAwliM" />
+    
     <div class="background-glow"></div>
 
     <nav>
